# photobooth

./: .gitignore  app.py  cam_test.py  camera.py  config.yml  image_filter.py  printer.py  process.py  pyproject.toml  requirements.txt  running-capture.sh  running-stream.sh  setup.bat  test_cam.py  test_image.py  test_printer.py  test_wifi.py  utils.py
templates/: collage.html  index.html  new_collage.html  photo_album.html  test.html
templates/static/css/: fonts.css
templates/static/js/: scripts.js
